# kabtangan_keyboard

./: .gitignore  README.md
core/: Cargo.toml
core/examples/: cli.rs  gui.rs
core/src/: alphabet.rs  dictionary.rs  error.rs  grammar.rs  lib.rs  prediction.rs  spell.rs  storage.rs  transliteration.rs
data/dictionary/: bahasa_sug_v1.json
desktop-prototype/: index.html  package-lock.json  package.json
desktop-prototype/src/: App.tsx  index.css
platform/android/app/: build.gradle.kts
platform/android/app/src/main/: AndroidManifest.xml
platform/android/app/src/main/kotlin/com/kabtangan/keyboard/: KabtanganInputMethodService.kt
platform/android/app/src/main/kotlin/com/kabtangan/keyboard/core/: KabtanganEngine.kt
platform/android/app/src/main/kotlin/com/kabtangan/keyboard/ui/: KeyboardView.kt
platform/linux/src/: kabtangan_ibus.c
platform/macos/src/: kabtangan_macos.swift
platform/windows/src/: kabtangan_windows.cpp
